# sdlc-course

./: .mcp.json  mcp_task_manager_implementation_plan.json
.claude/: settings.json  settings.local.json
.claude/agents/: test-writer.md
task-manager-mcp/: .env.example  .gitignore  .mcp.json  CLAUDE.md  README.md  main.py  pyproject.toml
task-manager-mcp/.claude/: settings.json
task-manager-mcp/.claude/agents/: code-reviewer.md
task-manager-mcp/.claude/skills/add-test/: SKILL.md
task-manager-mcp/.claude/skills/git-commit/: SKILL.md
task-manager-mcp/api/: AppDbContext.cs  Models.cs  Program.cs  api.csproj
task-manager-mcp/api.Tests/: TaskApiTests.cs  api.Tests.csproj
task-manager-mcp/api/Properties/: launchSettings.json
task-manager-mcp/mcp_server/: client.py  server.py
task-manager-mcp/scripts/: check_secrets.py  post_edit_quality.py
task-manager-mcp/tests/: test_api.py  test_mcp_contract.py
